[package]
name = "hatena"
version = "0.1.0"
authors = ["shimo8810 <shimo.8810@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atom_syndication = { version = "0.10.0", features = ["with-serde"] }
dotenv = "0.15.0"
quick-xml = { version = "0.22.0", features = ["serialize"] }
reqwest = "0.11.5"
serde = "1.0.130"
structopt = "0.3.23"
tokio = { version = "1.12.0", features = ["full"] }
url = "2.2.2"
